--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>yamvish mocha tests</title>
+    <title>elenpi mocha tests</title>
     <link rel="stylesheet" href="./test/mocha.css" />
     <style>
     #fixture {
@@ -21,8 +21,6 @@
     mocha.setup('bdd');
     </script>
     <script src="./test/test.js"></script>
-    <script type="text/javascript" src="./lib/lexer.js"></script>
-    <script type="text/javascript" src="./lib/directives-parser.js"></script>
     <script>
     window.onload = function() {
         mocha.run()
@@ -31,7 +29,7 @@
 </head>
 
 <body>
-    <h2 style="margin-left:30px;"><a href="https://github.com/nomocas/yamvish">yamvish</a> tests</h2>
+    <h2 style="margin-left:30px;"><a href="https://github.com/nomocas/elenpi">elenpi</a> tests</h2>
     <div id="mocha"></div>
 </body>
 
