debug late call + add test cases + make test cases workable in browser

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
     ;
     </style>
     <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./lib/chained-methods-parser.js"></script>
+    <script type="text/javascript" src="./lib/html-parser.js"></script>
     <script src="./test/chai.js"></script>
     <script src="./test/mocha.js"></script>
     <script>
     mocha.setup('bdd');
     </script>
     <script src="./test/test.js"></script>
+    <script src="./test/chained-method-parser.js"></script>
+    <script src="./test/html-parser.js"></script>
     <script>
     window.onload = function() {
         mocha.run()
